crates/uitest/fixtures/ty_check/payable_unknown_attr_on_recv_block.snap
---
source: crates/uitest/tests/ty_check.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty_check/payable_unknown_attr_on_recv_block.fe
---
error[13-0004]: unknown attribute `#[payble]` on recv block
  ┌─ payable_unknown_attr_on_recv_block.fe:9:5
  │
9 │     #[payble]
  │     ^^^^^^^^^ remove this attribute; `recv` blocks do not support normal attributes
